Weekly Blogs: Fixing the Paragraph alignment and Images

--- a/Blogs/weeklyblogs.css
+++ b/Blogs/weeklyblogs.css
@@ -166,10 +166,101 @@ h3 {
   text-decoration-color: rgb(160, 217, 239);
 }
 
+.description {
+  line-height: 1.7;
+  color: whitesmoke;
+  text-align: center;
+  text-wrap: revert;
+  display: block;
+  margin-left: 175px;
+  margin-right: 175px;
+  margin-top: 20px;
+}
+
 footer {
   text-align: center;
   margin-top: auto;
   margin-bottom: auto;
   font-size: 15px;
   letter-spacing: 2px;
+}
+
+.webImg-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
+  flex-wrap: wrap;
+  border: 1px #000000;
+  border-radius: 20px;
+  flex-wrap: wrap;
+  align-content: stretch;
+  height: 70vh;
+}
+
+.webImg-box {
+  width: 450px;
+  background-color: blueviolet;
+  border: 1px solid rgb(160, 217, 239);
+  margin: 20px;
+  border-radius: 10px;
+  height: 80%;
+  overflow: hidden;
+}
+
+.webImg-image {
+  width: auto;
+  height: 40vh;
+  padding: 0px;
+  border: #000000;
+  display: flex;
+}
+
+.webImg-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.webImg-text {
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+}
+
+.webImg-text span {
+  color: rgb(0, 0, 0);
+  font-size: 0.9rem;
+}
+
+.webImg-text .blog-title {
+  font-size: 1.3rem;
+  font-weight: 500;
+  color: #000000;
+}
+
+.webImg-text .blog-title:hover {
+  color: #881c28;
+  transition: all ease 0.3s;
+}
+
+.webImg-text p {
+  color:whitesmoke;
+  font-size: 0.9rem;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin: 13px 0px;
+}
+
+.webImg-text a {
+  color: black;
+}
+
+.webImg-text a:hover {
+  color: #881c28;
+  transition: all ease 0.3s;
 }
