--- a/Portfolio/Portfolio.css
+++ b/Portfolio/Portfolio.css
@@ -149,9 +149,13 @@ h1{
 
   .description{
     line-height: 1.7;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+  color: whitesmoke;
+  text-align: center;
+  text-wrap: revert;
+  display: block;
+  margin-left: 175px;
+  margin-right: 175px;
+  margin-top: 24px;
   }
 /*.profilecontainer{
     display: flex;
